--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,10 @@ p {
  .nav-items-list:last-child {
      margin-right: 0;
  }
-
+.icon-contact {
+    margin-right: 10px;
+    fill: currentColor;
+}
 
 .contacts-link {
     list-style-type: none;
@@ -109,6 +112,7 @@ p {
     padding-bottom: 32px;
    
 }
+
 .contacts-link-item:hover {
     color: #2196F3;
  }
@@ -123,7 +127,16 @@ p {
      display: flex;
  }
 /* Main information*/
-
+.overlay {
+    max-width: 1600px;
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), 
+    url('../images/фон\ \(1\).jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+}
 .title-main {
     color: var(--title-color);
     font-weight: 900;
