--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,10 @@ p {
     width: 270px;
     height: 120px;
 }
+.icon-main {
+    width: 65px;
+    height: 70px;
+}
 .contacts-link {
     list-style-type: none;
     display: flex;
