--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,10 @@ p {
     display: inline-flex;
     width: 270px;
     height: 120px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    margin-bottom: 30px;
 }
 .icon-main {
     width: 65px;
