--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,9 @@ p {
     height: 70px;
     border-radius: 4px;
     margin-bottom: 30px;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--background-team);
 }
 .icon-main {
    
