--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,7 @@ p {
 }
 .container-icon {
     display: inline-flex;
-    width: 65px;
-    height: 70px;
+    box-sizing: 270px 120px;
     border-radius: 4px;
     margin-bottom: 30px;
     align-items: center;
@@ -104,7 +103,8 @@ p {
     background-color: var(--background-team);
 }
 .icon-main {
-   
+    width: 65px;
+    height: 70px;
 }
 .contacts-link {
     list-style-type: none;
