--- a/css/style.css
+++ b/css/style.css
@@ -124,8 +124,8 @@ p {
     text-decoration: none;
     padding-top: 32px;
     padding-bottom: 32px;
-   
 }
+.
 
 .contacts-link-item:hover {
     color: #2196F3;
