--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,10 @@ p {
 .social-links-item {
     margin-right: 10px;
     fill: currentColor;
+    margin-top: 16px;
+    width: 44px;
+    height: 44px;
+    margin-bottom: 30px;
 }
 .social-links-list {
     display: flex;
