--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,14 @@ img {
     font-size: 16px;
     line-height: 1.19;
 }
+.title-client {
+    color: var(--color-text);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
 .company-icons-list {
     display: inline-flex;
 }
