--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,7 @@ img {
 .footer-icons {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .footer { 
     background: var(--background-color);
