--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ img {
     margin-top: 94px;
 }
 .company-icons-list {
-   
+   display: flex;
 }
 .company-icons-item {
     border: 1px solid #AFB1B8;
