--- a/css/style.css
+++ b/css/style.css
@@ -375,15 +375,22 @@ img {
 .list-icons {
     display: inline-flex;
 }
-.title-footer {
+.title-footer,
+.footer-icons
+{
     color: var(--title-color);
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     font-weight: 700;
+    margin-bottom: 20px;
+}
+.footer-adress {
+    margin-right: 70px;
 }
 .footer-icons {
-    
+
+
 }
 .footer-container {
     display: flex;
