--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --color-text: #212121;
     --color-text-header: #757575;
     --backround-color-clients: #E5E5E5;
+    --logo-clients: #AFB1B8;
 }
 body {
     font-family: 'Roboto', sans-serif;
@@ -367,6 +368,9 @@ img {
     border-radius: 4px;
     width: 100%;
     height: 100%;
+    justify-content: center;
+    align-items: center;
+    color: var(--logo-clients);
 }
 .company-icon {
     fill: currentColor;
