--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,9 @@ p {
     fill: currentColor;
    
 }
+.icon-contact:hover {
+    color: var(--hover-collor-text);
+}
 .container-icon {
     display: flex;
     height: 120px;
