--- a/css/style.css
+++ b/css/style.css
@@ -461,6 +461,20 @@ img {
 .item-icons:last-child {
     margin-right: 0;
 }
+.social-links-footer {
+    width: 44px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: var(--title-color);
+}
+.social-links-footer:hover,
+.social-links-footer:focus {
+    background-color: var(--hover-collor-text);
+    
+}
 
 /*portfolio*/
 
