--- a/css/style.css
+++ b/css/style.css
@@ -469,13 +469,16 @@ img {
     justify-content: center;
     border-radius: 50%;
     color: var(--title-color);
+    background-color: ; rgba(255, 255, 255, 0.1);
 }
 .social-links-footer:hover,
 .social-links-footer:focus {
     background-color: var(--hover-collor-text);
     
 }
+.social-links-icon-footer {
 
+}
 /*portfolio*/
 
 /*Main information*/
