--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,6 @@ p {
     list-style-type: none;
     text-decoration: none;
     display: flex;
-    margin-left: 93px;
  }
  
  .nav-items-list {
@@ -124,6 +123,8 @@ p {
     fill: currentColor;
 }
 .contacts-link-item {
+    display: flex;
+    align-items: center;
     color: var(--color-text-header);
     font-family: Roboto;
     font-style: normal;
@@ -167,7 +168,8 @@ p {
     color:  var(--title-color);
 }
 
-.contacts-link-item:hover {
+.contacts-link-item:hover, 
+.contacts-link-item:focus {
     color: #2196F3;
  }
  .contacts-link-list {
@@ -196,11 +198,13 @@ p {
     color: var(--title-color);
     font-weight: 900;
     font-size: 44px;
-    line-height: 1.36;
+    line-height: 1.16;
     text-align: center;
     width: 696px;
     margin-left: auto;
     margin-right: auto;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
 .button {
     color: var(--title-color);
@@ -223,7 +227,6 @@ p {
 .button:focus {
     background: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
 }
 .advantage-item {
     margin-right: 30px;
@@ -274,7 +277,7 @@ p {
     display: flex;
 }
 .work-section {
-    padding: 0;
+    padding-top: 0;
 }
 .work-title {
     color: var(--color-text);
@@ -355,13 +358,10 @@ img {
     line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-top: 94px;
     margin-bottom: 50px;
 }
 .company-icons-list {
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .company-icons-item {
     width: 170px;
@@ -372,6 +372,7 @@ img {
     margin-right: 0;
 }
 .company-links {
+    display: flex;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     width: 100%;
@@ -380,15 +381,19 @@ img {
     align-items: center;
     color: var(--logo-clients);
 }
+.company-links:hover, 
+.company-links:focus {
+    border-color: var(--hover-collor-text);
+    color: var(--hover-collor-text);
+}
 .company-icon {
     fill: currentColor;
 }
 /*footer*/
 .list-icons {
-    display: inline-flex;
+    display: flex;
 }
-.title-footer,
-.footer-icons
+.title-footer
 {
     color: var(--title-color);
     font-size: 14px;
@@ -406,6 +411,7 @@ img {
     fill: currentColor;
 }
 .footer-container {
+    align-items: baseline;
     display: flex;
 }
 .footer { 
@@ -449,11 +455,18 @@ img {
     color: var(--title-color);
 }
 .social-link-footer {
+    color: var(--title-color);
+    display: flex;
+    align-items: center;
     border-radius: 50%;
     justify-content: center;
     background: rgba(255, 255, 255, 0.1);
     width: 44px;
     height: 44px;
+}
+.social-link-footer:hover,
+.social-link-footer:focus {
+    background-color: var(--hover-collor-text);
 }
 .item-icons {
     margin-right: 10px;
@@ -482,6 +495,9 @@ img {
 /*portfolio*/
 
 /*Main information*/
+a {
+    text-decoration: none;
+}
 .main-section {
   background-color: var(--background-color);
   text-align: center;
@@ -506,7 +522,6 @@ img {
     border: transparent;
     border-radius: 4px;
     padding: 6px 22px;
-
 }
 
 .filter-item {
@@ -521,6 +536,7 @@ img {
 .filter-button:hover,
 .filter-button:focus
  {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     color: var(--title-color);
     background-color: var(--hover-collor-text);
 }
@@ -532,14 +548,15 @@ img {
 }
 .gallery-container{
     padding: 20px 24px; 
+    border-left: 1px solid #EEEEEE;;
+    border-bottom: 1px solid #EEEEEE;;
+    border-right: 1px solid #EEEEEE;;
 }
 .link-block {
     display: block;
 }
-.link-block:hover {
-    background: #FFFFFF;
-    border: 1px solid #EEEEEE;
-    box-sizing: border-box;
+.link-block:hover,
+.link-block:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .gallery-title {
