--- a/css/style.css
+++ b/css/style.css
@@ -548,9 +548,9 @@ a {
 }
 .gallery-container{
     padding: 20px 24px; 
-    border-left: 1px solid #EEEEEE;;
-    border-bottom: 1px solid #EEEEEE;;
-    border-right: 1px solid #EEEEEE;;
+    border-left: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
 }
 .link-block {
     display: block;
